# sentrux

./: .gitignore
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-cleanup/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-pmat-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/02.1-rust-deep-analysis/: 02.1-01-PLAN.md  02.1-01-SUMMARY.md  02.1-02-PLAN.md  02.1-02-SUMMARY.md  02.1-03-PLAN.md  02.1-03-SUMMARY.md  02.1-CONTEXT.md  02.1-RESEARCH.md  02.1-VALIDATION.md  02.1-VERIFICATION.md
.planning/phases/03-git-diff-overlay/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-gsd-phase-overlay/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
sentrux-bin/: Cargo.toml
sentrux-bin/src/: main.rs
sentrux-core/: Cargo.toml
sentrux-core/src/: license.rs
sentrux-core/tests/: unknown_extensions.rs
(+71 files in other folders)
