[package]
name = "sentrux"
version = "0.2.0"
edition = "2021"
description = "Live codebase visualization and structural quality gate for AI-agent-written code"
license = "MIT"
repository = "https://github.com/sentrux/sentrux"
homepage = "https://github.com/sentrux/sentrux"

[[bin]]
name = "sentrux"
path = "src/main.rs"

[dependencies]
sentrux-core = { path = "../sentrux-core" }
sentrux-pro = { path = "../../sentrux-pro", optional = true }
eframe = { workspace = true }
egui = { workspace = true }

[features]
default = []
pro = ["sentrux-core/pro", "dep:sentrux-pro"]  # Pro tools provided by separate sentrux-pro crate
